# sanowski-exam

./: README.md  report_template.aux  report_template.out
max-cut/: Cargo.toml  ilp_g05_60.0_result.csv
max-cut/benches/: .~lock.approx_bench_result.csv#  approx_bench.sh  approx_bench_result.csv  approx_bench_resultl.csv  heuristic_bench.rs  heuristic_bench.sh  heuristic_bench_result.csv  ilp_bench.sh  ilp_bench_result.csv  max_cut_bench.rs
max-cut/benches/data/: example.gr  vc-exact_004.gr  vc-exact_008.gr  vc-exact_010.gr  vc-exact_016.gr  vc-exact_022.gr  vc-exact_024.gr  vc-exact_034.gr  vc-exact_036.gr  vc-exact_038.gr  vc-exact_040.gr  vc-exact_044.gr  vc-exact_048.gr  vc-exact_052.gr  vc-exact_056.gr  vc-exact_060.gr  vc-exact_064.gr  vc-exact_066.gr  vc-exact_068.gr  vc-exact_070.gr  vc-exact_072.gr  vc-exact_076.gr  vc-exact_078.gr  vc-exact_084.gr  vc-exact_086.gr  vc-exact_088.gr  vc-exact_096.gr  vc-exact_106.gr  vc-exact_110.gr  vc-exact_112.gr  vc-exact_116.gr  vc-exact_120.gr  vc-exact_122.gr  vc-exact_124.gr  vc-exact_126.gr  vc-exact_128.gr  vc-exact_130.gr  vc-exact_132.gr  vc-exact_136.gr  vc-exact_138.gr  (+15 more)
max-cut/benches/data/vc_exact/: vc-exact_002.gr  vc-exact_012.gr  vc-exact_026.gr  vc-exact_032.gr  vc-exact_042.gr  vc-exact_046.gr  vc-exact_050.gr  (+33 more)
max-cut/src/: approx.rs  aprox.rs  args.rs  graph.rs  graph_parser.rs  greedy.rs  heuristic.rs  ilp.rs  lib.rs  main.rs  quad_matrix_bool.rs  quad_matrix_usize.rs
max-cut/src/graph/: adjacency_matrix.rs  edge.rs  node.rs
max-cut/src/graph_parser/: tests.rs
max-cut/tests/: ilp_test.rs
(+14 files in other folders)
