[package]
name = "max-cut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
good_lp = "1.3.3"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = { version = "0.3.6" }

[[bench]]
name = "heuristic_bench"
harness = false
